--- a/css/styles.css
+++ b/css/styles.css
@@ -672,6 +672,10 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  padding-top: 72px;
+  padding-bottom: 24px;
+  padding-left: 24px;
+  padding-right: 24px;
 
   width: 408px;
   height: 584px;
@@ -710,6 +714,13 @@ body {
 .modal-close-btn:hover .modal-close-icon,
 .modal-close-btn:focus .modal-close-icon {
   fill: #ffffff;
+}
+
+.modal-form {
+  display: flex;
+}
+
+.modal-form-field {
 }
 
 /*================/MODAL=========*/
