--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,14 @@ body {
 }
 
 .hidden {
-  display: none;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
 }
 
 /*====================== /COMPONENTS =========*/
@@ -487,6 +494,10 @@ body {
   margin-right: 120px;
 }
 
+.social-container {
+  margin-right: 80px;
+}
+
 .social-text {
   font-weight: 500;
   font-size: 16px;
@@ -526,7 +537,69 @@ body {
   background-color: #31d0aa;
 }
 
-/*===================FOOTER=================*/
+.form-footer-sub {
+  display: flex;
+  gap: 24px;
+}
+
+.form-footer-input {
+  box-sizing: border-box;
+  border: 1px solid #ffffff;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  background-color: #2e2f42;
+  padding: 8px 16px;
+  caret-color: #ffffff;
+  color: #ffffff;
+}
+
+.form-footer-input::placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 2;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+}
+
+.form-footer-input:focus {
+  outline: none;
+}
+
+.form-subscribe-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 24px;
+  gap: 16px;
+  background: #4d5ae5;
+  border-radius: 4px;
+  border: 0;
+
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-subscribe-btn:hover,
+.form-subscribe-btn:focus {
+  background-color: #31d0aa;
+}
+
+.telegram-icon {
+  fill: #ffffff;
+}
+
+/*===================/FOOTER=================*/
 /*=================PORTFOLIO============*/
 
 .buttons-imgs {
@@ -716,11 +789,173 @@ body {
   fill: #ffffff;
 }
 
+/*================MODAL FORM=========*/
+
+.modal-title-text {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  padding-bottom: 16px;
+}
+
 .modal-form {
   display: flex;
+  flex-direction: column;
+}
+
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  box-sizing: border-box;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding-left: 38px;
+  color: #2e2f42;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:focus {
+  outline: none;
+  border: 1px solid #4d5ae5;
+}
+
+.modal-form-input:focus + .modal-form-input-icon {
+  fill: #4d5ae5;
+}
+
+.modal-form-description {
+  display: block;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  margin-bottom: 4px;
+}
+
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
 }
 
 .modal-form-field {
+  margin-bottom: 8px;
 }
+
+.modal-form-input-icon {
+  position: absolute;
+  top: 50%;
+  transform: translate(0, -50%);
+  left: 16px;
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-message {
+  resize: none;
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
+  box-sizing: border-box;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  color: #2e2f42;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-message:focus {
+  outline: none;
+  border: 1px solid #4d5ae5;
+}
+
+.modal-form-message::placeholder {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-form-accept::before {
+  display: block;
+  width: 16px;
+  height: 16px;
+  box-sizing: border-box;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  cursor: pointer;
+  content: "";
+  margin-right: 8px;
+}
+
+.modal-form-check:checked + .modal-form-accept::before {
+  background-color: #404bbf;
+  border: 1px solid #404bbf;
+  background-image: url(../images/modal-window/policy-check.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  border-radius: 2px;
+}
+
+.modal-form-check:focus + .modal-form-accept::before {
+  background-color: #404bbf;
+  border: 1px solid #404bbf;
+  background-image: url(../images/modal-window/policy-check.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  border-radius: 2px;
+}
+
+.modal-form-accept {
+  display: flex;
+  align-items: center;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  padding-top: 8px;
+  padding-bottom: 24px;
+}
+
+.user-policy-link {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #4d5ae5;
+  text-decoration: underline;
+}
+
+.modal-form-send-btn {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-send-btn:hover,
+.modal-form-send-btn:focus {
+  background-color: var(--accent-color);
+}
+
+/*================/MODAL FORM=========*/
 
 /*================/MODAL=========*/
